[tool.poetry]
name = "paper-engine-strategy"
version = "0.1.0"
description = ""
authors = ["tomas-juhos <tomasdavidjuhos@gmail.com>"]
readme = "README.md"
packages = [{include = "paper_engine_strategy"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0.0"
psycopg2 = "(>=2.9.10,<3.0.0)"
pandas = "(>=2.2.3,<3.0.0)"
hurst = "(>=0.0.5,<0.0.6)"
pydantic = "(>=2.11.4,<3.0.0)"
alpaca-py = "(>=0.40.0,<0.41.0)"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
