[project]
name = "paper-engine-orders"
version = "0.1.0"
description = ""
authors = [
    {name = "tomas-juhos",email = "tomasdavidjuhos@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "alpaca-py (>=0.39.0,<0.40.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
